# 42-Piscine-Python-for-Data-Science

./: README.md  requirements.txt
Python0-Starting/ex00/: Hello.py
Python0-Starting/ex06/: filterstring.py
Python0-Starting/ex07/: sos.py
Python0-Starting/ex08/: Loading.py
Python1-Array/ex01/: array2D.py
Python1-Array/ex04/: load_image.py
Python1-Array/ex05/: load_image.py
Python2-DataTable/ex00/: load_csv.py
Python2-DataTable/ex02/: aff_pop.py
Python2-DataTable/ex03/: projection_life.py
Python3-OOP/ex00/: tester.py
Python3-OOP/ex01/: S1E7.py
Python4-Data-Oriented-Design/ex01/: in_out.py
Python4-Data-Oriented-Design/ex03/: new_student.py
ex00/: Hello.py  S1E9.py  give_bmi.py  statistics.py
ex01/: S1E7.py  S1E9.py  aff_life.py  array2D.py  format_ft_time.py  tester.py
ex02/: DiamondTrap.py  S1E7.py  aff_pop.py  callLimit.py  find_ft_type.py  load_image.py  tester.py
ex03/: NULL_not_found.py  ft_calculator.py  load_image.py  new_student.py  zoom.py
ex04/: ft_calculator.py  load_image.py  rotate.py  whatis.py
ex05/: building.py  pimp_image.py
ex06/: filterstring.py  ft_filter.py  ft_filterstring.py
ex07/: sos.py
ex08/: Loading.py
ex09/: pyproject.toml  setup.py
ex09/ft_package/: __init__.py  count_in_list.py
